--- a/Ingredients Chef/Base.lproj/Main.storyboard
+++ b/Ingredients Chef/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="335" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
-                                <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="tintColor" red="0.81960784310000001" green="0.42463383640000002" blue="0.25295749029999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </tableViewCell>
                         </prototypes>
                     </tableView>
@@ -55,6 +55,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="xoB-l9-fJD">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -163,50 +166,62 @@
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="9a6-6t-Wky">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.90561847554312813" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <inset key="scrollIndicatorInsets" minX="0.0" minY="1" maxX="0.0" maxY="0.0"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0gt-rH-6AV">
-                            <size key="itemSize" width="150" height="136"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="itemSize" width="181" height="201"/>
+                            <size key="headerReferenceSize" width="0.0" height="8"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="sectionInset" minX="1" minY="0.0" maxX="1" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionCell" id="btS-hz-Fln" customClass="RecipeCell" customModule="Ingredients_Chef" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="150" height="136"/>
+                                <rect key="frame" x="1" y="8" width="181" height="201"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="150" height="136"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="181" height="201"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qje-Iw-iY4">
-                                            <rect key="frame" x="0.0" y="0.0" width="150" height="136"/>
-                                        </imageView>
-                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="THW-Vb-Qk9">
-                                            <rect key="frame" x="65" y="58" width="20" height="20"/>
-                                        </activityIndicatorView>
-                                        <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999998807907104" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WKM-TD-wXy">
-                                            <rect key="frame" x="2" y="0.0" width="147" height="30"/>
-                                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aP3-af-7lW">
+                                            <rect key="frame" x="0.0" y="0.0" width="181" height="201"/>
+                                            <subviews>
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="THW-Vb-Qk9">
+                                                    <rect key="frame" x="80" y="90" width="20" height="20"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </activityIndicatorView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qje-Iw-iY4">
+                                                    <rect key="frame" x="0.0" y="0.0" width="181" height="103"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="103" id="dz4-E6-AcJ"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" alpha="0.69999998807907104" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WKM-TD-wXy">
+                                                    <rect key="frame" x="8" y="115" width="165" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="50" id="1xp-EI-oWt"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="Georgia-Bold" family="Georgia" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="30" id="1xp-EI-oWt"/>
+                                                <constraint firstItem="WKM-TD-wXy" firstAttribute="top" secondItem="qje-Iw-iY4" secondAttribute="bottom" constant="12" id="4B2-gB-DNh"/>
+                                                <constraint firstItem="WKM-TD-wXy" firstAttribute="centerX" secondItem="qje-Iw-iY4" secondAttribute="centerX" id="GzY-YA-4za"/>
+                                                <constraint firstItem="qje-Iw-iY4" firstAttribute="top" secondItem="aP3-af-7lW" secondAttribute="top" id="a0d-ey-eEh"/>
+                                                <constraint firstItem="qje-Iw-iY4" firstAttribute="leading" secondItem="aP3-af-7lW" secondAttribute="leading" id="aPJ-Fb-kPD"/>
+                                                <constraint firstAttribute="trailing" secondItem="qje-Iw-iY4" secondAttribute="trailing" id="cJz-MV-UuF"/>
+                                                <constraint firstItem="WKM-TD-wXy" firstAttribute="leading" secondItem="aP3-af-7lW" secondAttribute="leadingMargin" id="k4K-PH-eFS"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" name="Georgia-Bold" family="Georgia" pointSize="17"/>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        </view>
                                     </subviews>
                                 </view>
                                 <constraints>
-                                    <constraint firstItem="THW-Vb-Qk9" firstAttribute="centerX" secondItem="btS-hz-Fln" secondAttribute="centerX" id="5D4-uw-PEe"/>
-                                    <constraint firstItem="THW-Vb-Qk9" firstAttribute="centerY" secondItem="btS-hz-Fln" secondAttribute="centerY" id="LoJ-v3-ud0"/>
-                                    <constraint firstItem="THW-Vb-Qk9" firstAttribute="centerY" secondItem="qje-Iw-iY4" secondAttribute="centerY" id="XGI-HB-eCM"/>
-                                    <constraint firstItem="qje-Iw-iY4" firstAttribute="leading" secondItem="btS-hz-Fln" secondAttribute="leading" id="e3G-Vl-vK5"/>
-                                    <constraint firstAttribute="trailing" secondItem="qje-Iw-iY4" secondAttribute="trailing" id="jNb-jx-E1c"/>
-                                    <constraint firstAttribute="bottom" secondItem="qje-Iw-iY4" secondAttribute="bottom" id="ocW-wR-Bvo"/>
-                                    <constraint firstAttribute="trailing" secondItem="WKM-TD-wXy" secondAttribute="trailing" constant="1" id="tcL-VA-hPB"/>
-                                    <constraint firstItem="qje-Iw-iY4" firstAttribute="top" secondItem="btS-hz-Fln" secondAttribute="top" id="thn-4X-fUG"/>
-                                    <constraint firstItem="WKM-TD-wXy" firstAttribute="top" secondItem="btS-hz-Fln" secondAttribute="top" id="uo3-SA-gjF"/>
-                                    <constraint firstItem="WKM-TD-wXy" firstAttribute="leading" secondItem="btS-hz-Fln" secondAttribute="leading" constant="2" id="ztr-Qu-Qlb"/>
+                                    <constraint firstItem="aP3-af-7lW" firstAttribute="leading" secondItem="btS-hz-Fln" secondAttribute="leading" id="90i-bz-qPX"/>
+                                    <constraint firstItem="aP3-af-7lW" firstAttribute="top" secondItem="btS-hz-Fln" secondAttribute="top" id="AbH-Ls-Qty"/>
+                                    <constraint firstAttribute="trailing" secondItem="aP3-af-7lW" secondAttribute="trailing" id="jts-jL-y9x"/>
+                                    <constraint firstAttribute="bottom" secondItem="aP3-af-7lW" secondAttribute="bottom" id="nY3-4W-UKq"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="activityIndicator" destination="THW-Vb-Qk9" id="09m-So-BtG"/>
@@ -216,6 +231,10 @@
                                 </connections>
                             </collectionViewCell>
                         </cells>
+                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="h4W-NM-k4E">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="8"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </collectionReusableView>
                         <connections>
                             <outlet property="dataSource" destination="a7h-zc-bey" id="bBE-OT-jSu"/>
                             <outlet property="delegate" destination="a7h-zc-bey" id="y3d-x3-cz6"/>
@@ -234,7 +253,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TlI-ul-DKg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1850" y="1021"/>
+            <point key="canvasLocation" x="1848.8" y="1020.5397301349326"/>
         </scene>
         <!--Instructions-->
         <scene sceneID="pwJ-QC-zrM">
@@ -255,7 +274,7 @@
                                 </constraints>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="751" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Tb8-6f-ELT">
-                                <rect key="frame" x="0.0" y="309" width="375" height="309"/>
+                                <rect key="frame" x="0.0" y="309" width="375" height="358"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="PER-5w-FSC">
                                     <rect key="frame" x="0.0" y="72" width="375" height="287"/>
@@ -410,6 +429,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="PmC-lF-Fr4">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -445,6 +467,6 @@
         <image name="timer" width="200" height="200"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="S6U-XR-V2L"/>
+        <segue reference="FjM-uN-Sft"/>
     </inferredMetricsTieBreakers>
 </document>
